--- a/index.html
+++ b/index.html
@@ -37,12 +37,32 @@
 					</div>
 				</section>
 				<section>
-					<div>
-						<img src="http://placehold.it/300x300" alt="">
+					<div class="second-section-wrapper">
+						<div class="row">
+							<div>
+								<img class="fragment imageFromTop" data-fragment-index="1" src="http://placehold.it/300x300" alt="">
+								<span class="fragment fade-down big-name delayed-2" data-fragment-index="1" class="big-name">Adrien Le Menthéour</span>
+								<span class="fragment fade-down job delayed-3" data-fragment-index="1">Développeur Front-End</span>
+							</div>
+							<div>
+								<img class="fragment imageFromTop" data-fragment-index="2" src="http://placehold.it/300x300" alt="">
+								<span class="fragment fade-down big-name delayed-2" data-fragment-index="2" class="big-name">Élisabeth hamel</span>
+								<span class="fragment fade-down job delayed-3" data-fragment-index="2">Développeur Front-End</span>
+							</div>
+						</div>
+						<div class="row">
+							<div>
+								<img class="fragment imageFromTop" data-fragment-index="3" src="http://placehold.it/300x300" alt="">
+								<span class="fragment fade-down big-name delayed-2" data-fragment-index="3" class="big-name">Guillaume Caillet</span>
+								<span class="fragment fade-down job delayed-3" data-fragment-index="3">Alternant UX</span>
+							</div>
+							<div>
+								<img class="fragment imageFromTop" data-fragment-index="4" src="http://placehold.it/300x300" alt="">
+								<span class="fragment fade-down big-name delayed-2" data-fragment-index="4" class="big-name">Vincent Aribart</span>
+								<span class="fragment fade-down job delayed-3" data-fragment-index="4">Directeur Artistique Junior</span>
+							</div>
+						</div>
 					</div>
-					<div><img src="http://placehold.it/300x300" alt=""></div>
-					<div><img src="http://placehold.it/300x300" alt=""></div>
-					<div><img src="http://placehold.it/300x300" alt=""></div>
 				</section>
 				<section>Slide 2</section>
 			</div>
