--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 				<section data-transition="slide-in fade-out">
 					<div class="first-section-wrapper">
 						<div>
-							<img class="fragment imageFromTop" data-fragment-index="1" src="http://placehold.it/300x300" alt="">
+							<img class="fragment imageFromTop" width='300' height="300" data-fragment-index="1" src="/lib/img/boris.jpg" alt="">
 							<span class="fragment fade-down big-name" data-fragment-index="2" class="big-name">Boris Forconi</span>
 						</div>
 						<div>
-							<img class="fragment imageFromTop delayed" data-fragment-index="1" src="http://placehold.it/300x300" alt="">
+							<img class="fragment imageFromTop delayed" width='300' height="300" data-fragment-index="1" src="/lib/img/jf.jpg" alt="">
 							<span class="fragment fade-down big-name delayed" data-fragment-index="2" class="big-name">Jean-François Perrault</span>
 						</div>
 					</div>
@@ -40,24 +40,24 @@
 					<div class="second-section-wrapper">
 						<div class="row">
 							<div>
-								<img class="fragment imageFromTop" data-fragment-index="1" src="http://placehold.it/300x300" alt="">
+								<img class="fragment imageFromTop" width='200' height="200" data-fragment-index="1" src="/lib/img/adrien.jpg" alt="">
 								<span class="fragment fade-down big-name delayed-2" data-fragment-index="1" class="big-name">Adrien Le Menthéour</span>
 								<span class="fragment fade-down job delayed-3" data-fragment-index="1">Développeur Front-End</span>
 							</div>
 							<div>
-								<img class="fragment imageFromTop" data-fragment-index="2" src="http://placehold.it/300x300" alt="">
+								<img class="fragment imageFromTop" width='200' height="200" data-fragment-index="2" src="/lib/img/eli.jpg" alt="">
 								<span class="fragment fade-down big-name delayed-2" data-fragment-index="2" class="big-name">Élisabeth hamel</span>
 								<span class="fragment fade-down job delayed-3" data-fragment-index="2">Développeur Front-End</span>
 							</div>
 						</div>
 						<div class="row">
 							<div>
-								<img class="fragment imageFromTop" data-fragment-index="3" src="http://placehold.it/300x300" alt="">
+								<img class="fragment imageFromTop" width='200' height="200" data-fragment-index="3" src="/lib/img/guillaume.jpg" alt="">
 								<span class="fragment fade-down big-name delayed-2" data-fragment-index="3" class="big-name">Guillaume Caillet</span>
 								<span class="fragment fade-down job delayed-3" data-fragment-index="3">Alternant UX</span>
 							</div>
 							<div>
-								<img class="fragment imageFromTop" data-fragment-index="4" src="http://placehold.it/300x300" alt="">
+								<img class="fragment imageFromTop" width='200' height="200" data-fragment-index="4" src="/lib/img/vincent.png" alt="">
 								<span class="fragment fade-down big-name delayed-2" data-fragment-index="4" class="big-name">Vincent Aribart</span>
 								<span class="fragment fade-down job delayed-3" data-fragment-index="4">Directeur Artistique Junior</span>
 							</div>
